# quantalithos-work

./: Cargo.toml
artifacts/: README.md
artifacts/test/rel-20260608-a/: evidence-index.json
config/profiles/: integration-like.json  local-dev.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: consumer.rs  dependency.rs  errors.rs  idempotency.rs  iteration.rs  lib.rs  member.rs  ops.rs  outbox.rs  ports.rs  project.rs  promote.rs  query.rs  results.rs  unit_of_work.rs  workitem.rs
crates/application/tests/: consumer.rs  outbox.rs
crates/contracts/: Cargo.toml
crates/domain/: Cargo.toml
crates/infra/: Cargo.toml
crates/infra/src/: clock_id.rs  command_result_store.rs  config.rs  idempotency_store.rs  lib.rs  outbox_store.rs  publishers.rs  repositories.rs  runtime_builder.rs  source_resolvers.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/jobs/tests/: ops.rs  outbox.rs
crates/worker/: Cargo.toml
reports/: README.md
reports/acceptance/: handoff.md  open-issues.md  risk-acceptance.md  veto-checklist.md
reports/review/: agent-review.md  reviewer-notes.md
scripts/checks/: check_config_source_summary.sh  check_evidence_index.sh  check_fake_marker.sh  check_no_forbidden_output.sh  check_report_paths.sh
scripts/dev/: README.md
scripts/gates/: run_integration_like_gate.sh  run_main_gate.sh  run_nightly_gate.sh  run_pr_gate.sh  run_release_gate.sh  run_replay_gate.sh  run_staging_like_gate.sh
scripts/lib/: release_common.sh  release_data.sh
scripts/reports/: build_evidence_index.sh  build_redaction_report.sh  build_release_summary.sh  collect_gate_reports.sh
(+133 files in other folders)
