[workspace]
members = [
    "crates/contracts",
    "crates/domain",
    "crates/application",
    "crates/infra",
    "crates/api",
    "crates/worker",
    "crates/jobs",
]
resolver = "2"

[workspace.dependencies]
core-contracts = { path = "../quantalithos-core/crates/contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
