[package]
name = "work-infra"
version = "0.1.0"
edition = "2024"

[lib]
name = "work_infra"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
core-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
work-application = { path = "../application" }
work-contracts = { path = "../contracts" }
work-domain = { path = "../domain" }
