[package]
name = "work-jobs"
version = "0.1.0"
edition = "2024"

[lib]
name = "work_jobs"
path = "src/lib.rs"

[dependencies]
core-contracts.workspace = true
work-application = { path = "../application" }
work-contracts = { path = "../contracts" }
work-infra = { path = "../infra" }

[dev-dependencies]
tokio.workspace = true
work-domain = { path = "../domain" }
